k8s/tenant-a/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-app
  template:
    metadata:
      labels:
        app: task-app
    spec:
      containers:
        - name: task-app
          image: blackdocker01/task-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
