k8s/tenant-a/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-service
spec:
  type: NodePort
  selector:
    app: task-app
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30010
